Update test post

--- a/_posts/2019-01-06-test-post.md
+++ b/_posts/2019-01-06-test-post.md
@@ -3,13 +3,13 @@ layout: post
 title: Test post
 cover: cover.jpg
 date:   2019-01-06 11:45:00
-categories: posts
+comments: true
+categories: 
+- Test
+tags:
+- Test
 ---
 
-## Introducing Flex, a Jekyll theme
+## Test Post
 
-Flex is a minimalist, responsive theme based on the website, [The Development](http://thedevelopment.co).
-
-## Open Sourced on GitHub
-
-Flex is open sourced on GitHub and is licensed under the [MIT License](http://opensource.org/licenses/MIT). Feel free to contribute to it anytime!
+This is using for test if the layout is okay.
