--- a/_posts/2019-01-06-test-post.md
+++ b/_posts/2019-01-06-test-post.md
@@ -4,6 +4,7 @@ title: Test post
 cover: cover.jpg
 date:   2019-01-06 11:45:00
 comments: true
+disqus_category_id: test
 categories: 
 - Test
 tags:
