--- a/_posts/2019-01-06-test-post.md
+++ b/_posts/2019-01-06-test-post.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Test post
-cover: cover.jpg
+cover: test.jpg
 date:   2019-01-06 11:45:00
 comments: true
 disqus_category_id: test
