Configure autopage tag

--- a/_posts/2019-01-06-test-post.md
+++ b/_posts/2019-01-06-test-post.md
@@ -5,10 +5,8 @@ cover: test.jpg
 date:   2019-01-06 11:45:00
 comments: true
 disqus_category_id: test
-categories: 
-- Test
-tags:
-- Test
+categories: [Test]
+tags: [Test]
 ---
 
 ## Test Post
