--- a/_posts/2019-01-06-test-post.md
+++ b/_posts/2019-01-06-test-post.md
@@ -6,7 +6,7 @@ date:   2019-01-06 11:45:00
 comments: true
 disqus_category_id: test
 categories: [Test]
-tags: [Test]
+tags: Test
 ---
 
 ## Test Post
