--- a/_posts/2019-01-06-test-post.md
+++ b/_posts/2019-01-06-test-post.md
@@ -1,12 +1,14 @@
 ---
 layout: post
+pagination:
+  enabled: true
+  categories: Test
+  tags: Test
 title: Test post
 cover: test.jpg
 date:   2019-01-06 11:45:00
 comments: true
 disqus_category_id: test
-categories: [Test]
-tags: Test
 ---
 
 ## Test Post
