--- a/_posts/2019-05-16-OSLog.md
+++ b/_posts/2019-05-16-OSLog.md
@@ -1,8 +1,11 @@
 ---
 layout: post
+pagination:
+  enabled: true
+  categories: Test
+  tags: Test
 title: iOS Logging System -- OSLog
 date: 2019-05-13 16:04:00
-cover: nil
 comments: true
 disqus_category_id: iOSLoggingSystemOSLog
 categories: [iOS, Logging, OSLog]
