Update blockquotes & code layout

--- a/_posts/2019-05-16-OSLog.md
+++ b/_posts/2019-05-16-OSLog.md
@@ -12,11 +12,7 @@ This article is introducing the `Unified Logging` system and how to use it to me
 
 # Unified Logging
 From the document:
-```
-The unified logging system provides a single, efficient,
- performant API for capturing messaging across all levels
- of the system.
-```
+> The unified logging system provides a single, efficient, performant API for capturing messaging across all levelsof the system.
 
 The Unified Logging uses Activity Tracing for performance, consolicates kernel and user-space logging.
 
