--- a/_posts/2019-05-16-OSLog.md
+++ b/_posts/2019-05-16-OSLog.md
@@ -11,12 +11,14 @@ tags: [iOS, Logging, OSLog, OS]
 This article is introducing the `Unified Logging` system and how to use it to measure performace.
 
 # Unified Logging
+
 From the document:
 > The unified logging system provides a single, efficient, performant API for capturing messaging across all levelsof the system.
 
 The Unified Logging uses Activity Tracing for performance, consolicates kernel and user-space logging.
 
 ## Why using it
+
 - Compressing data
 - Deferring work and data collection
 - Managing log message lifecycle
@@ -24,6 +26,7 @@ The Unified Logging uses Activity Tracing for performance, consolicates kernel a
 We want as much logging on all the time as possible.
 
 ## Key Features
+
 - Improved categorization and filtering of log messages
 - Logging system collects caller information
 - New Builtin type specifiers - simplifies log message preparation
@@ -34,16 +37,19 @@ We want as much logging on all the time as possible.
 ## Logging Concepts
 
 ### Adption
+
 - Build with the macOS 10.12, iOS 10.0 or watchOS 3.0 SDK
 - Legacy APIs(NSLog, as_log_message, syslog...) redirected into new system
 - Log data will be in new format and location
 
 ### New File Formats
+
 - Log data is kept in a compressed binary format: `.tracev3` files
 - Stored under `/var/db/diagnostics` with support in `/var/db/uuidtext`
 - `.logarchive` format for portability of logs (collection of log data, easier to transfer to email or ...)
 
 ### Subsystems and Categories
+
 - Log messages can be associated with a subsystem and category
 - Can be used to control how log messages are fitered and displayed
 - A subsystem can contain multiple categories
@@ -51,15 +57,19 @@ We want as much logging on all the time as possible.
 Your application will have own subsystems and categories as needed.
 
 ### Logging Behavior
+
 Each log message has a level determined by the API used
+
 - Three basic levels -- Default, Info, Debug
 - Two special levels -- Fault, Error
 
 Each basic levels has two characteristics that can be set for system, subsystem, or category
+
 - Need to check if it is enabled (Default messages are always enabled)
 - Is it stored to disk or memory? (Fault or Error are always stored to disk.)
 
 The levels are hierarchical
+
 - Setting Debug to go to disk implies that Info will also go to disk
 
 Behavior can be customized by installing profiles or, on macOS, via log command
@@ -75,40 +85,49 @@ Behavior can be customized by installing profiles or, on macOS, via log command
 | FAULT | ALWAYS | DISK |
 
 ### Privacy
+
 Prevent accidental logging of Personally Identifiable Information(PII)
 
 ### Faults and Errors
+
 - Errors -- represent issues discovered within a given application/library
 - Faults -- represent more global problems in the system
 - Faults and Error log information is captured into a seperate set of log files (They will exsit longer than normal logs)
 
 ### Architecture
-<img src="/images/2019-05-16-OSLog/architecture.png" width="100%">
+
+![architecture](/images/2019-05-16-OSLog/architecture.png)
 
 ### Type Formatters
-<img src="/images/2019-05-16-OSLog/type_formatter.png" width="100%">
+
+![type_formatter](/images/2019-05-16-OSLog/type_formatter.png)
 
 ## Parameter Privacy
+
 Privacy is handled on a parameter by parameter basis
 `Scalars` and `Static strings` are assumed to be public
 `Dynamic strings`, `collections` and `objects` are assumed to be private
 
 ## Demo
+
 Here is the changing :
 
-<img src="/images/2019-05-16-OSLog/log_message_ex.png" width="100%">
+![log_message_ex](/images/2019-05-16-OSLog/log_message_ex.png)
 
 ## Activity API Improvements
+
 Activites are not objects that can be stored and re-used
+
 - Direct control of activity relationships during creation
 
 New API to auto-scope activites within the code
 
-<img src="/images/2019-05-16-OSLog/activity_example.png" width="100%">
+![activity_example](/images/2019-05-16-OSLog/activity_example.png)
 
 ## Tools
 
 ### Console
+
 - View live content form a system
 - Open log archives
 - New Activity centric view of logging and tracing
@@ -116,9 +135,11 @@ New API to auto-scope activites within the code
 - Device support
 
 ### log Command Line Tool
-<img src="/images/2019-05-16-OSLog/log_system_console.png" width="100%">
+
+![log_system_console](/images/2019-05-16-OSLog/log_system_console.png)
 
 ## Logging Etiquette
+
 - Ensure messages contain only information useful for debugging
 - Leverage built-in formatters
 - Avoid creating wrapper functions for `os_log` APIs
@@ -126,6 +147,7 @@ New API to auto-scope activites within the code
 - Avoid logging in tight code loops
 
 ## Suggest
+
 - Use `os_log` to log critical details to help debug issues
 - Use `os_log_info` for additional info that will be captured during error or fault
 - Use `os_log_debug` for high-volume debugging during development
@@ -133,7 +155,9 @@ New API to auto-scope activites within the code
 - Use `os_log_fault` to cause additional information capture from system
 
 ## Using `sysdiagnose`
+
 `sysdiagnose` is the preferred method to capture data for bug reports
+
 - Unified logging data in `system_logs.archive`
 
 Use `key-chord` to trigger
@@ -142,50 +166,57 @@ Transfer from device using iTunes
 
 Here are some `key-chord`s
 
-<img src="/images/2019-05-16-OSLog/key_chords.png" width="100%">
+![key_chords](/images/2019-05-16-OSLog/key_chords.png)
 
 # Measure Performance
 
 ## `os_signpost`
+
 Instruments can take the data that `signposts` produce and you could check what your program is doing.
 
 Here is an example:
 
-<img src="/images/2019-05-16-OSLog/os_signpost.png" width="100%">
+![os_signpost](/images/2019-05-16-OSLog/os_signpost.png)
 
 `os_signpost` allows to mark the beginning and the end(`.begin` & `.end`).
 
 ## Measure Asynchronous Operation
+
 - Signpost Name
 - Signpost ID -- tell overlapping operations apart
-    <img src="/images/2019-05-16-OSLog/signpost_id.png" width="100%">
+    ![signpost_id](/images/2019-05-16-OSLog/signpost_id.png)
     - Making Signpost ID ()
-    <img src="/images/2019-05-16-OSLog/make_signpost_id.png" width="100%">
+    ![make_signpost_id](/images/2019-05-16-OSLog/make_signpost_id.png)
     - process-scoped
     - making from object is convenient if we have the same object at `.begin` and `.end`
     - Demo
-        <img src="/images/2019-05-16-OSLog/signpost_id_ex.png" width="100%">
+        ![signpost_id_ex](/images/2019-05-16-OSLog/signpost_id_ex.png)
 
 ## Add Metadata to Signpost
+
 - Add context to the `.begin` and `.end`
 - Be able to pass arguments with `os_log` format string literal
 - Pass many arguments with different types
 - Pass dynamic strings
 
 ## Add Independent Event
+
 `os_signpost` have `.event` type
 Marking a single point
 
 ## Conditionally Enable Signpost
+
 Signposts are lightweight
+
 - Built to minimize observer effect
 - Built for fine-grained measurement in a short time span
 
 `OSLog.disabled`
 
-<img src="/images/2019-05-16-OSLog/signpost_enable.png" width="100%">
+![signpost_enable](/images/2019-05-16-OSLog/signpost_enable.png)
 
 ## Instruments
+
 - Blank -> add `os_signpost`
 - Able to retrieve from `Summary` part
 - Able to `Record` the action
