Update posts tag & categories

--- a/_posts/2019-05-16-OSLog.md
+++ b/_posts/2019-05-16-OSLog.md
@@ -5,7 +5,7 @@ date: 2019-05-13 16:04:00
 comments: true
 disqus_category_id: iOSLoggingSystemOSLog
 categories: [iOS, Logging]
-tags: [Logging, OSLog, OS]
+tags: [OSLog, OS]
 ---
 
 This article is introducing the `Unified Logging` system and how to use it to measure performace.
