--- a/_posts/2020-06-25-App-Clips.md
+++ b/_posts/2020-06-25-App-Clips.md
@@ -4,8 +4,8 @@ title: App Clips
 date: 2020-06-25 17:22:00
 comments: true
 disqus_category_id: AppClips
-categories: [AppClips]
-tags: [WWDC2020]
+categories: [WWDC2020]
+tags: [AppClips]
 ---
 
 ## Design Great app clips
