Update tag & category for some post

--- a/_posts/2020-02-08-Swift-Set.md
+++ b/_posts/2020-02-08-Swift-Set.md
@@ -5,7 +5,7 @@ date: 2020-02-08 12:02:00
 comments: true
 disqus_category_id: SwiftSet
 categories: [Swift]
-tags: [Collection Type]
+tags: [Collection]
 ---
 
 `Set` store distinct values of the same type in a collection with `no defined ordering`. Use `Set` instead of an array when the order of items is not important, or when need to ensure an item only appears once.
