--- a/_posts/2019-05-16-OSLog.md
+++ b/_posts/2019-05-16-OSLog.md
@@ -4,8 +4,8 @@ title: iOS Logging System -- OSLog
 date: 2019-05-13 16:04:00
 comments: true
 disqus_category_id: iOSLoggingSystemOSLog
-categories: [iOS, Logging]
-tags: [OSLog, OS]
+categories: [iOS]
+tags: [Logging]
 ---
 
 This article is introducing the `Unified Logging` system and how to use it to measure performace.
