--- a/_posts/2019-05-16-OSLog.md
+++ b/_posts/2019-05-16-OSLog.md
@@ -2,8 +2,7 @@
 layout: post
 title: iOS Logging System -- OSLog
 date: 2019-05-13 16:04:00
-comments: true
-disqus_category_id: iOSLoggingSystemOSLog
+comment_id: 12
 categories: [iOS]
 tags: [Logging]
 ---
