--- a/_posts/2020-03-17-iBeacon.md
+++ b/_posts/2020-03-17-iBeacon.md
@@ -2,8 +2,7 @@
 layout: post
 title: iBeacon
 date: 2020-03-17 22:01:00
-comments: true
-disqus_category_id: iBeacon
+comment_id: 62
 categories: [Apple]
 tags: [Beacons]
 ---
