--- a/_posts/2020-03-28-File-Size.md
+++ b/_posts/2020-03-28-File-Size.md
@@ -2,8 +2,7 @@
 layout: post
 title: File Size
 date: 2020-03-28 10:47:00
-comments: true
-disqus_category_id: FileSize
+comment_id: 69
 categories: [Memory, SystemDesign]
 tags: [Bytes]
 ---
