--- a/_posts/2020-06-25-App-Clips.md
+++ b/_posts/2020-06-25-App-Clips.md
@@ -2,8 +2,7 @@
 layout: post
 title: App Clips
 date: 2020-06-25 17:22:00
-comments: true
-disqus_category_id: AppClips
+comment_id: 85
 categories: [WWDC2020]
 tags: [AppClips]
 ---
