--- a/_posts/2020-02-08-Swift-Set.md
+++ b/_posts/2020-02-08-Swift-Set.md
@@ -2,8 +2,7 @@
 layout: post
 title: Swift Set
 date: 2020-02-08 12:02:00
-comments: true
-disqus_category_id: SwiftSet
+comment_id: 45
 categories: [Swift]
 tags: [Collection]
 ---
