--- a/_posts/2020-03-23-AVL-Tree.md
+++ b/_posts/2020-03-23-AVL-Tree.md
@@ -2,8 +2,7 @@
 layout: post
 title: AVL Tree
 date: 2020-03-23 14:50:00
-comments: true
-disqus_category_id: AVLTree
+comment_id: 66
 categories: [Algorithm]
 tags: [Tree]
 ---
