--- a/_posts/2020-04-01-Caching.md
+++ b/_posts/2020-04-01-Caching.md
@@ -2,8 +2,7 @@
 layout: post
 title: Caching
 date: 2020-04-01 21:13:00
-comments: true
-disqus_category_id: Caching
+comment_id: 73
 categories: [DataSystems, SystemDesign]
 tags: [Cache]
 ---
