--- a/_posts/2021-06-19-Try-Vapor.md
+++ b/_posts/2021-06-19-Try-Vapor.md
@@ -16,13 +16,15 @@ I've heard Swift on Server for a while, but never try it before. So I'd like to 
 
 After doing some research, I notice the major Swift framework is [Vapor](https://vapor.codes/). That's I'd like to try it at first. Basically I will follow with the guide, and will memo some if I met any error.
 
+# Hello World Vapor
+
 ```sh
 # install
 $ brew install vapor
 
 # new project
-$ vapor new helloVapor -n
-$ cd helloVapor
+$ vapor new Try-Vapor-Hello-World -n
+$ cd Try-Vapor-Hello-World
 
 # open in Xcode
 $ open Package.swift
@@ -67,8 +69,78 @@ It will also build and run project. It also show dependency fetching info and at
 [ NOTICE ] Server starting on http://127.0.0.1:8080
 ```
 
-Here is my test project: <https://github.com/HevaWu/Try-Vapor-Hello-World>
+Here is my test project: <https://github.com/HevaWu/Try-Vapor-Hello-World>.
+
+# Shiba Random Vapor
+
+Next step, I'd like to try to use [Leaf](https://docs.vapor.codes/4.0/leaf/getting-started/) in Vapor. Here is my test project: <https://github.com/HevaWu/Vapor-Shiba-Random>
+
+Same as above, create one new project by:
+
+```sh
+$ vapor new Vapor-Shiba-Random
+# select `y` at ``Would you like to use Leaf?``
+```
+
+The generated template have bellow problem for now:
+
+- `routes.swift` has a redundant route, we need to remove it to use
+- `Package.swift` target dependency missing `Leaf` module, we need to manually add it
+- manually add `app.views.use(.leaf)` in `configure.swift` to tell system we are using leaf
+
+Next step, we want to build it, after running, we notice the `http://127.0.0.1:8080/index` show error:
+
+```sh
+open(file:oFlag:mode:): No such file or directory (errno: 2)
+```
+
+It means it cannot find proper leaf template place. For solving it, we need to set [custom working directory](https://docs.vapor.codes/4.0/xcode/#custom-working-directory) to let vapor find it.
+
+For now, the template paths should show well. We can try to add more template and render it now!
+
+## Add Welcome Page
+
+First, for testing adding images and embedded child leaf, I add one `/welcome` for try.
+
+I set my `base.leaf` and `welcome.leaf` as bellow:
+
+```html
+<!-- base.leaf -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>#import("title")</title>
+    <link rel="stylesheet" href="/styles/syntax.css">
+</head>
+
+<body>
+    <h1>Hello! #import("title")</h1>
+    #import("body")
+</body>
+
+</html>
+
+<!-- welcome.leaf -->
+#extend("base"):
+    #export("title"):
+    It works!
+    #endexport
+
+    #export("body"):
+        <div class="welcome">
+            <img src="/images/hello.png">
+        </div>
+    #endexport
+#endextend
+```
+
+Here are several notes:
+
+- manually create `/Public` folder first, and put required server sharing files into it
+- by using `/styles` and `/images`, we need to enable `/Public` [FileMiddleware](https://api.vapor.codes/vapor/main/Vapor/FileMiddleware/) first.
+- use `extend`, `export`, `import` for sharing data between parent and child pages. (if we directly search online, there are some site is using `set` `get` which vapor is not support them anymore)
 
 #### Reference
 
 - <https://swift.org/server/>
+- <https://api.vapor.codes/vapor/main/Vapor/FileMiddleware/>
