update: add one more test project

--- a/_posts/2021-06-19-Try-Vapor.md
+++ b/_posts/2021-06-19-Try-Vapor.md
@@ -75,6 +75,11 @@ Here is my test project: <https://github.com/HevaWu/Try-Vapor-Hello-World>.
 
 Next step, I'd like to try to use [Leaf](https://docs.vapor.codes/4.0/leaf/getting-started/) in Vapor. Here is my test project: <https://github.com/HevaWu/Vapor-Shiba-Random>
 
+It will run like:
+![](/images/2021-06-19-Try-Vapor/list.png)
+
+![](/images/2021-06-19-Try-Vapor/shiba-list.gif)
+
 Same as above, create one new project by:
 
 ```sh
@@ -140,7 +145,139 @@ Here are several notes:
 - by using `/styles` and `/images`, we need to enable `/Public` [FileMiddleware](https://api.vapor.codes/vapor/main/Vapor/FileMiddleware/) first.
 - use `extend`, `export`, `import` for sharing data between parent and child pages. (if we directly search online, there are some site is using `set` `get` which vapor is not support them anymore)
 
+## Shiba List Page
+
+Next Step, I'd like to fetch `get` request from the `http://shibe.online/api/shibes?count=100&urls=true&httpsUrls=true`.
+
+*NOTE: Vapor API changed a lot for each major version. For now, the `Data(body.readableBytesView)` works at here. But, this behavior might be changed in later version.*
+
+```swift
+let future = req.client
+    .get("http://shibe.online/api/shibes?count=100&urls=true&httpsUrls=true")
+    .flatMapThrowing { res -> ShibaImageURLList? in
+        guard let body = res.body else {
+            return nil
+        }
+        let data = Data(body.readableBytesView)
+        guard let jsonAsArr = try JSONSerialization.jsonObject(with: data, options: []) as? [Any] else {
+            return nil
+        }
+
+        let list = jsonAsArr.compactMap { object -> ShibaImageURL? in
+            if let str = object as? String {
+                return ShibaImageURL(urlString: str)
+            } else {
+                return nil
+            }
+        }
+        return ShibaImageURLList(list: list)
+    }
+```
+
+This code will return a `EventLoopFuture<ShibaImageURLList?>` object now. And next step will be show list on our website.
+
+```swift
+.flatMap { list in
+    req.view.render("shibalist", list)
+}
+```
+
+*NOTE: NOT using `req.view.render("shibalist", future)`. It will throw error about `EventLoopFuture<Type> not from Encodable`. This actually means we should not directly use future object, instead, use `flatMap` to filter and render object properly.*
+
+*NOTE: We need to use a `ShibaImageURLList` to wrap final response at here. If we directly use `[ShibaImageURL]`, system will throw error at the render page `LeafKit.LeafError.Reason.unsupportedFeature(\"You must use a top level dictionary or type for the context. Arrays are not allowed.\")` to inform we have to wrap it to a final response object.*
+
+For now, the list can show well now. But I'd like to try if we can clean some code by using Controller. Vapor's [Folder Structure doc](https://docs.vapor.codes/4.0/folder-structure/#routesswift) mentioned:
+
+> Controllers are great way of grouping together application logic. Most controllers have many functions that accept a request and return some sort of response.
+
+For this request, I tried to make a Controller like:
+
+```swift
+final class ShibaController {
+    func index(req: Request) -> EventLoopFuture<View> {
+        let uri = URI(string: "http://shibe.online/api/shibes?count=100&urls=true&httpsUrls=true")
+        return req.client
+            .get(uri)
+            .flatMapThrowing { res -> ShibaImageURLList in
+                guard let body = res.body else {
+                    return ShibaImageURLList.empty
+                }
+                let data = Data(body.readableBytesView)
+                guard let jsonAsArr = try JSONSerialization.jsonObject(with: data, options: []) as? [Any] else {
+                    return ShibaImageURLList.empty
+                }
+
+                let list = jsonAsArr
+                    .compactMap { object -> ShibaImageURL? in
+                        if let str = object as? String {
+                            return ShibaImageURL(urlString: str)
+                        } else {
+                            return nil
+                        }
+                    }
+                return ShibaImageURLList(list: list)
+            }
+            .flatMap { list in
+                req.view.render("shibalist", list)
+            }
+    }
+}
+```
+
+And call it in routes like:
+
+```swift
+let shibaController = ShibaController()
+app.get("shibalist", use: shibaController.index(req:))
+```
+
+The rendered page is working same as previous code. Now, the page is good. But, we find we can customize the parameter in this `GET` request, ex: count, urls, etc. Maybe we can try to make a user input form, and parse parameter to this request to get list.
+
+```swift
+// define at Controller
+func index(req: Request) -> EventLoopFuture<View> {
+    return req.view.render("shibalistGetParam")
+}
+
+func getList(req: Request, uri: URI) -> EventLoopFuture<View> {
+    return req.client
+        .get(uri)
+        ...
+}
+
+func postParams(req: Request) throws -> EventLoopFuture<View> {
+    let content = try req.content.decode(ShibaListGetRequestContent.self)
+    if var components = URLComponents(string: Self.baseURLString) {
+        components.queryItems = [
+            URLQueryItem(name: "count", value: content.count),
+            URLQueryItem(name: "urls", value: content.urls.description),
+            URLQueryItem(name: "httpUrls", value: content.httpsUrls.description),
+        ]
+        if let uriStr = components.string {
+            let uri = URI(string: uriStr)
+            return getList(req: req, uri: uri)
+        }
+    }
+
+    // parse URI failed, back to welcome page
+    return req.view.render("welcome")
+}
+
+// call in routes
+app.post("shibalist-submit", use: shibaController.postParams(req:))
+```
+
+DONE!
+
+# The End
+
+It's very easy to use Vapor for generating some website, its logic is clean. But I'm thinking it might still under improvement/design, so its configuration is keep changing. We'd better to read its latest document to do our design, rather than search some existed project. (That's why bump major version changes 🤣)
+
+Well, in general, as a Swift programmer, I'm very happy to see we can use Swift on Server development, and I'd like to keep watching its updates! 🤠
+
 #### Reference
 
 - <https://swift.org/server/>
 - <https://api.vapor.codes/vapor/main/Vapor/FileMiddleware/>
+- <https://docs.vapor.codes/2.0/http/body/>
+- <https://docs.vapor.codes/4.0/folder-structure/>
