--- a/_posts/2020-03-28-File-Size.md
+++ b/_posts/2020-03-28-File-Size.md
@@ -4,7 +4,7 @@ title: File Size
 date: 2020-03-28 10:47:00
 comment_id: 69
 categories: [Memory, SystemDesign]
-tags: [Bytes]
+tags: [Bytes, Data Intensive]
 ---
 
 Memory of a Computer is any physical device which is capable of storing information whether it is large or small and stores ite temporarily or permanently.
@@ -16,7 +16,7 @@ Memory can be either volatile or non-volatile. `Volatile` memory is a type of me
 
 ## Units of Memory
 
-A computer processor is made up of multiple decisive circuits, each one of which may be either OFF or ON. These two states in terms of memory are represented by a 0 or 1. In order to count higher than 1, such `bits` (Binary digitS) are suspended together. 
+A computer processor is made up of multiple decisive circuits, each one of which may be either OFF or ON. These two states in terms of memory are represented by a 0 or 1. In order to count higher than 1, such `bits` (Binary digitS) are suspended together.
 
 ```s
 1 byte = 8 bits
