--- a/_posts/2021-06-19-Try-Vapor.md
+++ b/_posts/2021-06-19-Try-Vapor.md
@@ -4,7 +4,7 @@ title: Try Vapor
 date: 2021-06-19 17:51:00
 comment_id: 168
 categories: [Swift, Server]
-tag: [Vapor]
+tags: [Vapor]
 ---
 
 I've heard Swift on Server for a while, but never try it before. So I'd like to try to use it and memo some in this blog. Here is some benefits they wrote in the doc:
