--- a/_posts/2021-07-03-Gray-Code.md
+++ b/_posts/2021-07-03-Gray-Code.md
@@ -4,7 +4,7 @@ title: Gray Code
 date: 2021-07-03 23:00:00
 comment_id: 171
 categories: [Math]
-tag: [Bit]
+tags: [Bit]
 ---
 
 > The reflected binary code (RBC), also known just as reflected binary (RB) or Gray code after Frank Gray, is an ordering of the binary numeral system such that two successive values differ in only one bit (binary digit).
